k8s/casa/apps/superorder-old/postgres.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  selector:
    deployment: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: postgres
  template:
    metadata:
      labels:
        deployment: postgres
    spec:
      volumes:
        - name: postgres-data-volume
          persistentVolumeClaim:
            claimName: postgres-data-volume-claim
      containers:
        - name: postgres
          image: postgres:9.6-alpine
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres-data-volume
