k8s/casa/apps/superorder-old/redis.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  selector:
    deployment: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: redis
  template:
    metadata:
      labels:
        deployment: redis
    spec:
      volumes:
        - name: redis-data-volume
          persistentVolumeClaim:
            claimName: redis-data-volume-claim
      containers:
        - name: redis
          image: redis
          volumeMounts:
            - mountPath: "/data"
              name: redis-data-volume
