k8s/casa/apps/superorder-old/app.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`coins1.pyldin601.xyz`)
      services:
        - kind: Service
          name: app
          port: 8080
          scheme: http
  tls:
    certResolver: default
---
kind: Service
apiVersion: v1
metadata:
  name: app
spec:
  selector:
    deployment: app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: app
  template:
    metadata:
      labels:
        deployment: app
    spec:
      containers:
        - name: app
          image: pldin601/superorder-v1:049e6d93b6f8463ece0d42c255ca8c27401418bd
      nodeSelector:
        region: us
